// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PendingTransactions should render the default markup 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  exclusive={true}
  handlerTag={1}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff0e0",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "center",
            "paddingBottom": 12,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 12,
            "width": "100%",
          }
        }
      >
        <View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#FF8C00",
                "borderBottomLeftRadius": 100000,
                "borderBottomRightRadius": 100000,
                "borderTopLeftRadius": 100000,
                "borderTopRightRadius": 100000,
                "flexDirection": "column",
                "height": 28,
                "justifyContent": "center",
                "maxHeight": 28,
                "maxWidth": 28,
                "minHeight": 28,
                "minWidth": 28,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": 28,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fff0e0",
                  "fontSize": 14,
                }
              }
              suppressHighlighting={true}
            >
              2
            </Text>
          </View>
        </View>
        <Text
          style={
            {
              "color": "#FF8C00",
              "fontFamily": "DMSans-SemiBold",
              "fontSize": 16,
            }
          }
          suppressHighlighting={true}
        >
          Pending Transactions
        </Text>
        <View>
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FF8C00",
                  "fontSize": 20,
                },
                undefined,
                {
                  "fontFamily": "SafeIcons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNGestureHandlerButton>
`;

exports[`PendingTransactions should render the pending transactions in fullWidth layout 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  exclusive={true}
  handlerTag={2}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff0e0",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "center",
            "paddingBottom": 12,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 12,
            "width": "100%",
          }
        }
      >
        <View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#FF8C00",
                "borderBottomLeftRadius": 100000,
                "borderBottomRightRadius": 100000,
                "borderTopLeftRadius": 100000,
                "borderTopRightRadius": 100000,
                "flexDirection": "column",
                "height": 28,
                "justifyContent": "center",
                "maxHeight": 28,
                "maxWidth": 28,
                "minHeight": 28,
                "minWidth": 28,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": 28,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fff0e0",
                  "fontSize": 14,
                }
              }
              suppressHighlighting={true}
            >
              2
            </Text>
          </View>
        </View>
        <Text
          style={
            {
              "color": "#FF8C00",
              "fontFamily": "DMSans-SemiBold",
              "fontSize": 16,
            }
          }
          suppressHighlighting={true}
        >
          Pending Transactions
        </Text>
        <View>
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FF8C00",
                  "fontSize": 20,
                },
                undefined,
                {
                  "fontFamily": "SafeIcons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNGestureHandlerButton>
`;
